...
    
    private var favoritesViewModel: FavoritesViewModel?
    private var favoriteMovies: [FavoriteMovie] = []
    
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Filmes Favoritos"
        self.setupCollectionView()
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        self.favoritesViewModel = FavoritesViewModel(delegate: self)
...
